<package>
  <name>concat_pcl</name>
  <version>0.0.0</version>
  <description>The concat_pcl package concatenates pointclouds multiple pointclouds from the sensor to get a denser pointcloud in one message</description>

  <maintainer email="limcatrina@gmail.com">Catrina Lim</maintainer>
  <author email="limcatrina@gmail.com">Catrina Lim</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>

</package>
